# textural-truth-discovery

./: .gitignore  CMakeLists.txt  Member.cpp  Member.h  README.md  dataset.cpp  dataset.h  main.cpp  oblivious_primitive.cpp  oblivious_primitive.h  oblivious_ttruth.cpp  oblivious_ttruth.h  process.py  test_ttruth.cpp  texttruth.cpp  texttruth.h  ttruth.cpp  ttruth.h  util.cpp  util.h
answer_grading/: ground_truth_answer
answer_grading/answers/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+47 more)
answer_grading/questions/: questions
draw/: nb_exam.py  non-oblivious.txt  oblivious.txt
